# crystall-punk-14

./: .gitignore  CLA.md  CrystallPunk14.sln.DotSettings  LICENSE.TXT  LICENSE_CE.TXT  LICENSE_CLA.txt  LICENSE_MIT.txt  Legal.md  README.md  SPECIAL-CodTenAlt.txt  SPECIAL-TornadoTech.txt  SpaceStation14.sln.DotSettings  git  integration_test_run.bat  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  rsi-schema.json
.github/ISSUE_TEMPLATE/: feature-request.yml  feature-request_en.yml  feature-request_ru.yml  issue_report.md  issue_report_en.yml  issue_report_ru.yml  toolshed-feature-request.md
.github/workflows/: CP14Publish.yml  build-test-debug.yml  check-trailing-whitespace.yml  cla.yml  github-pages.yml  validate-rgas.yml  validate-rsis.yml
Content.Client/Actions/: ActionsSystem.cs
Content.Client/Audio/: ContentAudioSystem.AmbientMusic.cs  ContentAudioSystem.CP14AmbientLoop.cs  ContentAudioSystem.cs
Content.Client/Clothing/: ClientClothingSystem.cs
Content.Client/Damage/: DamageVisualsComponent.cs
Content.Client/Doors/: DoorSystem.cs
Content.Client/Entry/: EntryPoint.cs
Content.Client/Ghost/: GhostSystem.cs
Content.Client/Guidebook/: GuideEntry.cs  GuidebookSystem.cs
Content.Client/Humanoid/: HumanoidAppearanceSystem.cs
Content.Client/IconSmoothing/: IconSmoothComponent.cs  IconSmoothSystem.cs
Pow3r/: Program.OpenGL.cs
Resources/: keybinds.yml  manifest.yml  migration.yml
Schemas/: rga_validators.py  rsi.json
Tools/: actions_changelogs_since_last_run.py
docs/: index.md
(+5262 files in other folders)
